tests/ui/format.stderr
error: useless use of `format!`
 --> $DIR/format.rs:6:5
  |
6 |     format!("foo");
  |     ^^^^^^^^^^^^^^^
  |
note: lint level defined here
 --> $DIR/format.rs:3:9
  |
3 | #![deny(useless_format)]
  |         ^^^^^^^^^^^^^^

error: useless use of `format!`
 --> $DIR/format.rs:8:5
  |
8 |     format!("{}", "foo");
  |     ^^^^^^^^^^^^^^^^^^^^^

error: useless use of `format!`
  --> $DIR/format.rs:15:5
   |
15 |     format!("{}", arg);
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

